fix: dark mode switcher

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -196,7 +196,7 @@ body {
       color: $color-primary-dark;
 
       .dark-mode {
-        background-color: red;
+        color: $color-primary;
       }
     }
 
